# googlesheets

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
examples/: basic_usage.js  basic_usage.py  basic_usage.ts  productivity_tracker.js  productivity_tracker.py  productivity_tracker.ts
src/: git_history_analyzer.py  sheets_cli.py
src/cli/: create-spreadsheet.js  create-spreadsheet.ts  create-via-drive.js  create-via-drive.ts  git-analyzer.ts  index.js  index.ts  oauth-setup.js  oauth-setup.ts
src/lib/: auth.js  auth.ts  git-analyzer.ts  oauth-auth.js  oauth-auth.ts  sheets-client.js  sheets-client.ts
src/types/: index.js  index.ts
